# py-skip-subtitles

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/: black.yml  mypy.yml
skip_subtitles/: __main__.py  _command.py  _logging.py  _util.py  predicates.py  util.py
skip_subtitles/_video_skip/: file.py  filter.py  screenshot.py
test/: test_doctests.py
