[metadata]
name = skip_subtitles
description = A Python library and CLI to generate skip files from subtitle files.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/rudolfbyker/py-skip-subtitles
author = Rudolf Byker
author_email = rudolfbyker@gmail.com
license = MIT
license_files =
  LICENSE.md
classifiers =
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Operating System :: OS Independent
project_urls =
  Documentation = https://github.com/rudolfbyker/py-skip-subtitles
  Source = https://github.com/rudolfbyker/py-skip-subtitles
  Tracker = https://github.com/rudolfbyker/py-skip-subtitles/issues

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
  pysrt
  click
  pillow
python_requires = >=3.7
setup_requires =
  setuptools_scm

[options.entry_points]
console_scripts =
  skip_subtitles = skip_subtitles.__main__:main
